<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/ivEventImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"/>

            <TextView
                android:id="@+id/tvEventName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_title"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginTop="8dp" />

            <TextView
                android:id="@+id/tvEventDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_date"
                android:layout_marginTop="4dp" />

            <TextView
                android:id="@+id/tvEventDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_description"
                android:layout_marginTop="8dp" />

            <TextView
                android:id="@+id/tvEventOrganizer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/organizer"
                android:layout_marginTop="8dp" />

            <TextView
                android:id="@+id/tvEventQuota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/tvEventFullDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_description"
                android:layout_marginTop="8dp" />


            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:layout_marginTop="16dp" />

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="18dp"
        android:src="@drawable/ic_favorite"
        android:contentDescription="@string/title_favorite"/>

</FrameLayout>
